--- a/less/style.less
+++ b/less/style.less
@@ -164,8 +164,8 @@ html,body {
 
 .topmenu__item:hover .topmenu-inner {
 	display: block;
-	-webkit-animation: showMenu .3s ease-in 1;
-	animation: showMenu .3s ease-in 1;
+	-webkit-animation: showMenu .2s ease-in;
+	animation: showMenu .2s ease-in;
 }
 
 @-webkit-keyframes showMenu {
