add service styles

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,11 @@ body {
   clear: both;
   display: block;
   overflow: hidden;
+  padding: 55px 0;
+}
+.container__item-bg {
+  background: #e4eaf4;
+  padding: 40px 0 70px 0;
 }
 .activities {
   clear: both;
@@ -208,4 +213,21 @@ body {
 }
 .activities p {
   margin: 0 0 15px 0;
+}
+.services {
+  text-align: center;
+}
+.services__title {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  line-height: normal !important;
+  margin: 0 0 20px 0;
+  font-weight: 700;
+  font-size: 26px;
+  text-transform: uppercase;
+  color: #000 !important;
+}
+.services p {
+  line-height: 19px;
 }
