--- a/less/style.less
+++ b/less/style.less
@@ -203,6 +203,11 @@ html,body {
 	max-width: 100%;
 	&__item {
 		.clear();
+		padding: 55px 0;
+		&-bg {
+			background: #e4eaf4;
+			padding: 40px 0 70px 0;
+		}
 	}
 }
 
@@ -222,5 +227,20 @@ html,body {
 	& p {
 		margin: 0 0 15px 0;
 	}
+}
 
+.services {
+	text-align: center;
+	&__title {
+		.clear();
+		line-height: normal !important;
+		margin: 0 0 20px 0;
+		font-weight: 700;
+		font-size: 26px;
+		text-transform: uppercase;
+		color: #000 !important;
+	}
+	& p {
+		line-height: 19px;
+	}
 }
