--- a/css/style.css
+++ b/css/style.css
@@ -188,12 +188,15 @@ body {
   clear: both;
   display: block;
   overflow: hidden;
-  padding: 55px 0;
+  padding: 20px 0;
 }
 .container__item-bg {
   background: #e4eaf4 url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%221440px%22%20height%3D%22129px%22%20viewBox%3D%220%200%201440%20129%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cg%20transform%3D%22translate%280.000000%2C%20-582.000000%29%22%20fill%3D%22%23ffffff%22%3E%0A%3Cpolygon%20points%3D%220%20582%20720%20695%201440%20582%201440%20711%200%20711%22%3E%3C/polygon%3E%3C/g%3E%3C/svg%3E') center bottom no-repeat;
-  padding: 40px 0 120px 0;
-  background-size: 1920px 130px;
+  padding: 40px 0 160px 0;
+  background-size: cover;
+}
+.container__item-bg .services__item {
+  background: transparent !important;
 }
 .activities {
   clear: both;
@@ -202,6 +205,7 @@ body {
   font-size: 16px;
   color: #3a4354;
   line-height: 19px;
+  padding: 50px 0 70px 0;
 }
 .activities__title {
   clear: both;
@@ -233,6 +237,12 @@ body {
 .services p {
   line-height: 19px;
 }
+.services-bill {
+  padding-top: 35px;
+}
+.services-bill p {
+  margin-bottom: 40px;
+}
 .services__wrapper {
   clear: both;
   display: block;
@@ -240,12 +250,27 @@ body {
   padding: 40px 0 10px 0;
   margin: 0 -35px;
 }
+.services__wrapper-without {
+  padding: 0;
+}
 .services__item {
   display: inline-block;
   vertical-align: top;
   overflow: hidden;
   width: 145px;
-  margin: 0 20px;
+  margin: 0 2px;
+  padding: 18px;
+  box-sizing: content-box;
+  background: transparent;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: 0.1s;
+  -moz-transition: 0.1s;
+  transition: 0.1s;
+}
+.services__item:hover {
+  background: #dee5ec;
 }
 .services__item-wrapper {
   clear: both;
@@ -255,8 +280,17 @@ body {
   position: relative;
   background: #fff;
   margin: 0 0 15px 0;
+  border: 1px solid #c5cfdf;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
-.services__item-wrapper object {
+.services__item-wrapper img {
+  display: block;
+  max-width: 110px;
+}
+.services__item-wrapper object,
+.services__item-wrapper img {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -266,4 +300,33 @@ body {
 }
 .services__item-text {
   font-size: 15px;
+}
+.services__wrapper-without .services__item-wrapper {
+  margin: 0;
+}
+.button-wrapper {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  text-align: center;
+}
+.button {
+  display: inline-block;
+  margin: 40px 0;
+  text-decoration: none;
+  font-size: 15px;
+  line-height: 46px;
+  height: 43px;
+  text-transform: uppercase;
+  color: #fff;
+  background: #5173a5;
+  padding: 0 30px;
+  border-bottom: 4px solid #395c90;
+  cursor: pointer;
+}
+.button:hover {
+  background: #496794;
+}
+.button:active {
+  line-height: 48px;
 }
