--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,36 @@ body {
   font-size: 16px;
   color: #3a4354;
 }
+header,
+footer {
+  position: relative;
+  z-index: 99;
+}
+.show-menu {
+  display: block;
+  overflow: hidden;
+  position: fixed;
+}
+header,
+section,
+footer {
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.show-menu header,
+.show-menu section,
+.show-menu footer {
+  transform: translate(240px);
+}
+.show-menu .body {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
 .wrapper {
   display: block;
   overflow: hidden;
@@ -50,7 +80,7 @@ body {
   text-decoration: none;
   font-size: 29px;
   color: #000;
-  font-weight: 700;
+  font-weight: 500;
 }
 .header__menu {
   display: block;
@@ -141,7 +171,7 @@ body {
   font-size: 16px;
   margin: 0 28px 5px 28px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   border-bottom: 3px solid rgba(57, 92, 144, 0.12);
   background: transparent !important;
 }
@@ -250,7 +280,7 @@ body {
   overflow: hidden;
   line-height: normal !important;
   margin: 0 0 20px 0;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 26px;
   text-transform: uppercase;
   color: #000 !important;
@@ -273,6 +303,8 @@ body {
 }
 .services__wrapper-without {
   padding: 0;
+  margin: auto;
+  max-width: 600px;
 }
 .services__half {
   float: left;
@@ -287,7 +319,7 @@ body {
   margin: 0 0 22px 0;
   font-size: 16px;
   color: #000;
-  font-weight: 700;
+  font-weight: 500;
 }
 .services__item {
   display: inline-block;
@@ -367,6 +399,9 @@ body {
   padding: 0 40px;
   margin: 0;
 }
+.button-big:active {
+  line-height: 65px;
+}
 .button:hover {
   background: #496794;
 }
@@ -384,6 +419,7 @@ body {
   text-align: center;
 }
 .footer__phone {
+  color: #fff;
   font-size: 40px;
   margin: 0 0 20px 0;
 }
@@ -413,4 +449,314 @@ body {
   border: 5px solid #fff;
   background: #fff url('../images/copy.png') center center no-repeat;
   box-sizing: content-box;
+}
+.menu-show {
+  display: none;
+}
+@media (max-width: 1100px) {
+  .topmenu {
+    width: 900px;
+    text-align: center;
+  }
+  .topmenu__item a {
+    padding: 0 49px;
+  }
+}
+@media (max-width: 940px) {
+  section {
+    padding: 70px 0 0 0;
+  }
+  .wrapper {
+    padding: 0 30px;
+    width: auto;
+    position: relative;
+  }
+  .container__bg {
+    height: 380px;
+  }
+  .menu-show {
+    opacity: .9;
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 30px;
+    top: 17px;
+    right: -50px;
+    cursor: pointer;
+  }
+  .topmenu {
+    width: auto;
+    text-align: left;
+    padding: 10px 0 0 0;
+  }
+  .topmenu__item {
+    text-align: left;
+    display: block;
+    margin: auto !important;
+    background: transparent !important;
+  }
+  .topmenu__item a {
+    padding: 0 5px !important;
+    margin: 0 10px;
+    text-align: left;
+    font-size: 14px;
+    color: #3a4354;
+    line-height: 40px;
+    border-bottom: 1px solid #f2f2f2;
+  }
+  .topmenu__item:last-child a {
+    border: none;
+  }
+  .topmenu-inner {
+    position: relative;
+    display: block;
+    box-shadow: none;
+    width: auto;
+    min-width: auto;
+    margin: 5px 0;
+    background: transparent;
+    -webkit-animation: none !important;
+    animation: none !important;
+  }
+  .topmenu-inner__item {
+    margin: 0 15px;
+    background: transparent !important;
+  }
+  .topmenu-inner__item a {
+    line-height: 35px;
+    color: #3a4354 !important;
+  }
+  .topmenu-inner__item:first-child {
+    padding: 10px 0 0 0;
+    font-size: 14px;
+  }
+  .header {
+    border: none;
+    background: #395c90;
+    color: #fff;
+    padding: 21px 0 15px 0;
+    height: 70px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+  }
+  .header__menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 240px;
+    z-index: 99999;
+    background: #fff;
+    -webkit-transform: translateX(-240px);
+    -moz-transform: translateX(-240px);
+    transform: translateX(-240px);
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    transition: 0.2s;
+    -webkit-box-shadow: inset -20px 0px 16px -17px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: inset -20px 0px 16px -17px rgba(0, 0, 0, 0.25);
+    box-shadow: inset -20px 0px 16px -17px rgba(0, 0, 0, 0.25);
+  }
+  .header__logo {
+    font-size: 19px;
+    color: #b8ceee;
+    padding: 0;
+    margin-left: 30px;
+  }
+  .header__phone {
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+  }
+  .header__contact {
+    letter-spacing: .5px;
+    margin: 0;
+    padding: 0;
+  }
+  .header__contact-text {
+    color: #b8ceee;
+  }
+}
+@media (max-width: 760px) {
+  html,
+  body {
+    font-size: 14px;
+  }
+  .cont p {
+    text-align: center;
+  }
+  .container__item-bg {
+    padding-top: 30px;
+    margin-bottom: -80px;
+  }
+  .container__bg {
+    height: 280px;
+  }
+  .activities {
+    padding-bottom: 30px;
+    padding-top: 10px;
+  }
+  .activities__title {
+    font-size: 20px;
+    margin: 0 0 15px 0 !important;
+  }
+  .services {
+    text-align: left;
+  }
+  .services br {
+    display: none;
+  }
+  .services__title {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 20px !important;
+  }
+  .services__wrapper {
+    padding-top: 15px;
+    text-align: center;
+  }
+  .services-bill p {
+    margin: 0;
+  }
+  .services-bill .services__wrapper {
+    clear: none;
+  }
+  .services-bill .services__item {
+    padding: 18px;
+  }
+  .services__half {
+    float: none;
+    clear: both;
+    display: block;
+    width: auto;
+    padding: 20px 0;
+  }
+  .footer {
+    padding-top: 25px;
+  }
+  .footer__phone {
+    font-size: 36px;
+    color: #fff !important;
+  }
+  .footer__phone a {
+    color: #fff;
+    text-decoration: none;
+  }
+  .footer span {
+    display: block;
+    clear: both;
+    height: 0;
+    visibility: hidden;
+  }
+  .footer__adress {
+    font-size: 16px;
+  }
+}
+@media (max-width: 480px) {
+  .services__wrapper-without {
+    margin: 0 -35px;
+  }
+  .container__bg {
+    height: 160px;
+  }
+  .services__item {
+    padding: 18px 10px !important;
+  }
+}
+@media (max-width: 340px) {
+  .services__wrapper-without {
+    margin: 0 -35px;
+  }
+  .container__bg {
+    height: 160px;
+  }
+  .services-bill .services__wrapper {
+    padding: 0px !important;
+  }
+  .services-bill .services__wrapper .services__item {
+    padding: 18px 0px !important;
+  }
+  .button {
+    padding: 0 15px;
+  }
+  .footer__phone {
+    font-size: 28px;
+  }
+  .footer__adress {
+    font-size: 14px;
+  }
+}
+.c-hamburger {
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  text-indent: -9999px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+}
+.c-hamburger:focus {
+  outline: none;
+}
+.c-hamburger span {
+  display: block;
+  position: absolute;
+  top: 13px;
+  left: 3px;
+  right: 3px;
+  height: 4px;
+  background: white;
+}
+.c-hamburger span::before,
+.c-hamburger span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  content: "";
+}
+.c-hamburger span::before {
+  top: -9px;
+}
+.c-hamburger span::after {
+  bottom: -9px;
+}
+.c-hamburger--htx span {
+  transition: background 0s 0.3s;
+}
+.c-hamburger--htx span::before,
+.c-hamburger--htx span::after {
+  transition-duration: 0.3s, 0.3s;
+  transition-delay: 0.3s, 0s;
+}
+.c-hamburger--htx span::before {
+  transition-property: top, transform;
+}
+.c-hamburger--htx span::after {
+  transition-property: bottom, transform;
+}
+/* active state, i.e. menu open */
+.c-hamburger--htx.is-active span {
+  background: none;
+}
+.c-hamburger--htx.is-active span::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+.c-hamburger--htx.is-active span::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+.c-hamburger--htx.is-active span::before,
+.c-hamburger--htx.is-active span::after {
+  transition-delay: 0s, 0.3s;
 }
