--- a/css/1reset.css
+++ b/css/1reset.css
@@ -114,3 +114,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button,
+html input[type=button],
+input[type=reset],
+input[type=submit] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
