--- a/less/style.less
+++ b/less/style.less
@@ -51,6 +51,10 @@ header, section, footer {
 	.transition(.2s);
 }
 
+header {
+	border-top: 10px solid @colorDef;
+}
+
 .show-menu {
 	& header, section, footer {
 		transform: translate(240px);
@@ -73,8 +77,7 @@ header, section, footer {
 .header {
 	display: block;
 	max-width: 100%;
-	border-top: 12px solid @colorDef;
-	padding: 30px 0 0 0;
+	padding: 24px 0 0 0;
 	&__logo {
 		float: left;
 		overflow: hidden;
@@ -391,8 +394,16 @@ header, section, footer {
 	color: #fff;
 	background: #5173a5;
 	padding: 0 30px;
+	border: none;
 	border-bottom: 4px solid #395c90;
 	cursor: pointer;
+	font-family: 'BloggerSans';
+	&:hover {
+		background: darken(#5173a5, 5%)
+	}
+	&:active {
+		line-height: 48px;
+	}
 	&-big {
 		height: 63px;
 		line-height: 65px;
@@ -400,14 +411,8 @@ header, section, footer {
 		padding: 0 40px;
 		margin: 0;
 		&:active {
-			line-height: 65px;
+			line-height: 68px;
 		}
-	}
-	&:hover {
-		background: darken(#5173a5, 5%)
-	}
-	&:active {
-		line-height: 48px;
 	}
 }
 
@@ -454,6 +459,65 @@ header, section, footer {
 	display: none;
 }
 
+.popup {
+	display: none;
+	position: fixed;
+	z-index: 99;
+	width: 580px;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	&-show {
+		display: block;
+	}
+	&__wrapper {
+		.clear();
+		position: relative;
+		background: #f2f2f2;
+		padding: 45px 35px;
+		-webkit-box-shadow:0 6px 15px 0 rgba(39,50,59,0.50);
+		box-shadow:0 6px 15px 0 rgba(39,50,59,0.50);
+		.radius(3px);
+	}
+	&__close {
+		position: absolute;
+		width: 24px;
+		height: 24px;
+		top: 15px;
+		right: 15px;
+		background: #000;
+		cursor: pointer;
+	}
+	&__title {
+		text-align: center;
+		margin: 0 0 25px 0;
+		font-weight: bold;
+		font-size: 21px;
+		text-transform: uppercase;
+		color: #000;
+		line-height:18px;
+		&-sm {
+			font-size: 13px;
+			margin: 0 0 5px 0 !important;
+		}
+	}
+	&__input {
+		.clear();
+		width: 100%;
+		padding: 0 15px;
+		margin: 0 0 35px 0;
+		height: 46px;
+		background: #fff;
+		border: 1px solid #b8c3ce;
+		.radius(2px);
+	}
+	& .button {
+		width: 297px;
+	}
+}
+
 @media (max-width: 1100px) {
 	.topmenu {
 		width: 900px;
@@ -463,10 +527,20 @@ header, section, footer {
 				padding: 0 49px;
 			}
 		}
+		&-inner {
+			&__item {
+				& a {
+					padding: 0 28px;
+				}
+			}
+		}
 	}
 }
 
 @media (max-width: 940px) {
+	header {
+		border: none;
+	}
 	section {
 		padding: 70px 0 0 0;
 	}
